testdata/parser/ok/classes/TPOK_ClassDecl.java
int main() {
		printInt(1);
		return 0;
}

class myClass {
	int a;
	int b;
}
